@startuml entrypoint

class MainConfiguratore {
    +{static} entrypoint(args: String[]): void
}

class MainFruitore {
    +{static} entrypoint(args: String[]): void
}


MainConfiguratore o--> controller.OptionList
MainConfiguratore o--> db.MyMenu

MainFruitore o--> controller.OptionList
MainFruitore o--> db.MyMenu


@enduml